<resources>
    <string name="app_name">TrashFormer</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="nickName">暱稱</string>

    <string name="create_account">建立帳號</string>
    <string name="login">登入</string>

    <string name="loading">讀取中</string>

    <!--home page-->
    <string name="equipment">裝備</string>
    <string name="store">商店</string>
    <string name="report">報表</string>
    <string name="camera">相機</string>
    <string name="setting">設定</string>
    <string name="gift">禮物</string>
    <string name="mission">任務：</string>
    <string name="input_password_to_setting">請輸入密碼以進入設定</string>
    <string name="btn_password_confirm">確認密碼</string>
    <string name="get_present_prefix">獲得</string>
    <string name="get_present_suffix">啦！</string>
    <string name="btn_get_confirm">確認領取</string>
    <string name="defalt_unknown">\?</string>

    <!--分類-->
    <string name="aluminum_can">鐵鋁罐</string>
    <string name="bottle">寶特瓶</string>
    <string name="glass_can">玻璃瓶</string>
    <string name="battery">電池&#160;&#160;&#160;&#160;</string>
    <string name="other">其他</string>
    <string name="select_device_recycle_item">選擇裝置辨識物</string>

    <!--報表頁-->
    <string name="recycle_proportion">回收比例</string>
    <string name="recycle_amount">回收數量</string>

    <!--相機結果頁-->
    <string name="result">結果</string>
    <string name="you_know">/ 你知道嗎 /</string>
    <string name="follow_me">/ 跟著我做 /</string>
    <string name="can_tips">先把飲料喝光。\n再把鋁罐壓扁</string>
    <string name="default_tips">每天商家使用的紙餐具或是紙盒，為了防水通常會在內層表面塗上一層（約 5%-7%）聚乙烯（polyethylene, PE）膠膜，或是經過浸蠟處理，讓紙杯、紙製免洗餐具變質，導致後續的回收處理困難度激增。</string>
    <string name="tips_one">寶特瓶的瓶蓋瓶環與寶特瓶屬於不同的塑膠材質，若沒有取下直接丟入回收桶，回收伯伯阿姨需要辛苦地一個個處理，才能讓寶特瓶回收再利用，因此回收寶特瓶時，要記得拆掉瓶蓋和瓶環喔！</string>
    <string name="tips_two">飲料店、早餐店常用的紙杯、紙餐盒等紙容器不能丟到紙類回收喔！紙容器為了防水，內部都會多上一層PE膜，需要特殊處理後才能再利用，因此正確的處理方式應為，清洗乾淨後丟至「紙容器」的回收桶。</string>
    <string name="tips_three">電子發票、ATM明細表等使用感熱方式印製的紙類，為了防水防油，使用了許多化學穩定劑，因此這種紙類無法回收，必須丟至一般垃圾喔！
</string>
    <string name="camera_result_success_string">正確！這是</string>
    <string name="camera_result_failed_string">丟錯囉！這是</string>
    <string name="camera_result_exp">經驗值</string>
    <string name="keep_recognize">繼續辨識</string>
    <string name="back_home">回到首頁</string>

    <!--設定頁-->
    <string name="select_recycle_item">選擇辨識物品</string>
    <string name="logout">登出帳號</string>
    <string name="logout_confirm">是否確定登出此帳號？</string>
    <string name="btn_logout_confirm">確認登出</string>

    <string name="create_user_failed">新增用戶失敗，請重試</string>
    <string name="login_failed">登入失敗，請重試</string>
    <string name="something_failed">發生錯誤，請重試</string>

    <string name="confirm">確認</string>
    <string name="cancel">取消</string>


    <string name="testAccount">test202@gmail.com</string>
    <string name="testPassword">testtest</string>
</resources>
