<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="84dp"
    android:paddingTop="64dp"
    android:orientation="vertical"
    android:background="@drawable/dialog_default_shape">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/input_password_to_setting"
        android:textColor="@color/inputText_4D555B"
        android:textSize="30dp"/>

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="450dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_text_input_layout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/inputText_4D555B"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/passwordDialogEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@null"
            android:maxLines="1"
            android:inputType="textPassword"
            android:text="@string/testPassword"
            android:textColor="@color/inputText_4D555B"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="80dp"
        android:paddingLeft="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_login_shape"
        android:text="@string/btn_password_confirm"
        android:textColor="@color/white"
        android:textSize="25sp" />

</LinearLayout>