<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.bbhackathon.trashformer.login.fragment.CreateUserViewModel">
        </variable>

    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/layout_line"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:textSize="40dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/account_layout"
                        android:layout_centerHorizontal="true"
                        android:layout_width="400dp"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/accountEditText"
                            android:hint="@string/account"
                            android:text="@={viewmodel.account}"
                            android:textSize="30sp"
                            android:textColor="#000000"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"/>
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_below="@id/account_layout"
                        android:id="@+id/password_layout"
                        android:layout_centerHorizontal="true"
                        android:layout_width="400dp"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/passwordEditText"
                            android:hint="@string/password"
                            android:text="@={viewmodel.password}"
                            android:textSize="30sp"
                            android:textColor="#000000"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"/>
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_below="@+id/password_layout"
                        android:id="@+id/nickName_layout"
                        android:layout_centerHorizontal="true"
                        android:layout_width="400dp"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/nickNameEditText"
                            android:hint="@string/nickName"
                            android:text="@={viewmodel.nickName}"
                            android:textSize="30sp"
                            android:textColor="#000000"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right">
                    <Button
                        android:id="@+id/btnApply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm"
                        android:textSize="20sp"/>

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textSize="20sp"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>
</layout>