<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/leaderboard_backgroun_layer_list">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="60dp"
        android:paddingRight="90dp"
        android:paddingLeft="90dp"
        android:background="@drawable/dialog_default_shape"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iconReport"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/home_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/result"
                android:textColor="@color/inputText_4D555B"
                android:textSize="30sp"/>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:background="@drawable/dialog_default_shape">

            <ImageView
                android:id="@+id/resutImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="30dp"
                android:layout_gravity="center"
                android:src="@drawable/btn_can" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="100dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="沒錯，這是鋁罐！"
                    android:textSize="30sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="經驗值 +50"
                    android:textColor="@color/btn_login_border_A699ED"
                    android:textSize="24sp"/>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:src="@drawable/avatar_icon_sunglow"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/leaderboard_background_F04848"
                android:text="@string/you_know"/>

        </LinearLayout>


        <TextView
            android:layout_marginTop="90dp"
            android:id="@+id/camera_result_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_tips"
            android:textColor="@color/inputText_4D555B"
            android:textSize="25sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnKeepRecognize"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/btn_login_shape"
                android:text="@string/keep_recognize"
                android:textSize="25sp"
                android:textColor="@color/white"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <Button
                android:id="@+id/btnBackHome"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/btn_login_shape"
                android:text="@string/back_home"
                android:textSize="25sp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>