<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.bbhackathon.trashformer.login.fragment.CreateUserViewModel">
        </variable>

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_yellow_circle_backgroun_layer_list"
        tools:context=".createUser.CreateUserActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="110dp"
            android:background="@drawable/dialog_default_shape"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="60dp"
            android:paddingBottom="60dp">

            <LinearLayout
                android:id="@+id/account_layout"
                android:layout_width="504dp"
                android:layout_height="80dp"
                android:background="@drawable/login_text_input_layout"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textColor="@color/inputText_4D555B"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/accountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:background="@null"
                    android:maxLines="1"
                    android:textColor="@color/inputText_4D555B"
                    android:textSize="30sp"
                    android:text="@={viewmodel.account}"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="504dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/login_text_input_layout"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/inputText_4D555B"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:background="@null"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:textColor="@color/inputText_4D555B"
                    android:textSize="30sp"
                    android:text="@={viewmodel.password}"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/nickname_layout"
                android:layout_width="504dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/login_text_input_layout"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickName"
                    android:textColor="@color/inputText_4D555B"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/nicknameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:background="@null"
                    android:maxLines="1"
                    android:textColor="@color/inputText_4D555B"
                    android:textSize="30sp"
                    android:text="@={viewmodel.nickName}"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnCreateUser"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/btn_login_shape"
                android:paddingLeft="80dp"
                android:paddingRight="80dp"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>
    </RelativeLayout>

</layout>