<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.bbhackathon.trashformer.login.LoginViewModel"></variable>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background_layer_list"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="280dp"
                android:layout_height="144dp"
                android:src="@drawable/login_illustration" />

            <ImageView
                android:layout_width="480dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:src="@drawable/logo" />


            <LinearLayout
                android:id="@+id/account_layout"
                android:layout_width="504dp"
                android:layout_height="80dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/login_text_input_layout"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textColor="@color/inputText_4D555B"
                    android:textSize="30sp"/>

                <EditText
                    android:id="@+id/accountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_marginLeft="16dp"
                    android:maxLines="1"
                    android:text="@={viewmodel.account}"
                    android:textColor="@color/inputText_4D555B"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="504dp"
                android:layout_height="80dp"
                android:background="@drawable/login_text_input_layout"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/inputText_4D555B"
                    android:textSize="30sp"/>

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_marginLeft="16dp"
                    android:maxLines="1"
                    android:text="@={viewmodel.password}"
                    android:textColor="@color/inputText_4D555B"
                    android:textSize="30sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="504dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_login_shape"
                    android:text="@string/create_account"
                    android:textSize="25sp"
                    android:textColor="@color/white"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:visibility="@{View.INVISIBLE}" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_login_shape"
                    android:text="@string/login"
                    android:textSize="25sp"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>