<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cameraRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/leaderboard_backgroun_layer_list">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/dialog_default_shape"
                android:orientation="vertical"
                android:paddingBottom="40dp"
                android:paddingLeft="90dp"
                android:paddingRight="90dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iconReport"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:src="@drawable/home_camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/result"
                        android:textColor="@color/inputText_4D555B"
                        android:textSize="30sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/dialog_default_shape"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/resutImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/btn_can" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingBottom="20dp"
                        android:paddingTop="20dp">

                        <TextView
                            android:id="@+id/camera_result_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text=""
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/camera_result_exp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/camera_result_exp"
                            android:textColor="@color/btn_login_border_A699ED"
                            android:textSize="24sp" />


                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:src="@drawable/avatar_icon_sunglow" />


                    <TextView
                        android:id="@+id/tipsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="60dp"
                        android:text="@string/you_know"
                        android:textColor="@color/leaderboard_background_F04848"
                        android:textSize="30sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/successTipsLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="-25dp"
                    android:visibility="gone"
                    android:background="@drawable/dialog_default_shape"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/successTipsImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/instruction_can"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>


                <TextView
                    android:id="@+id/camera_result_tips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/default_tips"
                    android:textColor="@color/inputText_4D555B"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_layout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="60dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnKeepRecognize"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_login_shape"
                        android:text="@string/keep_recognize"
                        android:textColor="@color/white"
                        android:textSize="25sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp" />

                    <Button
                        android:id="@+id/btnBackHome"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_login_shape"
                        android:text="@string/back_home"
                        android:textColor="@color/white"
                        android:textSize="25sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/testImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/testTextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</layout>